--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
   anyio==4.11.0
   arrow==1.4.0
   binaryornot==0.4.4
+  cachetools==6.2.2
   certifi==2025.11.12
   chardet==5.2.0
   charset-normalizer==3.4.4
@@ -25,8 +26,15 @@ dependencies = [
   flet-cli==0.28.3
   flet-desktop==0.28.3
   future==1.0.0
+  google-api-core==2.28.1
+  google-api-python-client==2.187.0
+  google-auth==2.41.1
+  google-auth-httplib2==0.2.1
+  google-auth-oauthlib==1.2.3
+  googleapis-common-protos==1.72.0
   h11==0.16.0
   httpcore==1.0.9
+  httplib2==0.31.0
   httpx==0.28.1
   idna==3.11
   iniconfig==2.3.0
@@ -38,7 +46,12 @@ dependencies = [
   packaging==25.0
   pillow==12.0.0
   pluggy==1.6.0
+  proto-plus==1.26.1
+  protobuf==6.33.1
+  pyasn1==0.6.1
+  pyasn1_modules==0.4.2
   Pygments==2.19.2
+  pyparsing==3.2.5
   pypng==0.20220715.0
   pytest==9.0.1
   python-dateutil==2.9.0.post0
@@ -48,7 +61,9 @@ dependencies = [
   qrcode==7.4.2
   repath==0.9.0
   requests==2.32.5
+  requests-oauthlib==2.0.0
   rich==14.2.0
+  rsa==4.9.1
   six==1.17.0
   sniffio==1.3.1
   text-unidecode==1.3
@@ -56,6 +71,7 @@ dependencies = [
   tqdm==4.67.1
   typing_extensions==4.15.0
   tzdata==2025.2
+  uritemplate==4.2.0
   urllib3==2.5.0
   watchdog==4.0.2
 ]
