--- a/.gitignore
+++ b/.gitignore
@@ -163,13 +163,11 @@ cython_debug/
 storage/
 
 # OAuth & Secrets
-src/uploader/client_secret.json
-src/uploader/token.json
+configs/client_secret.json
+configs/firebase-admin-key.json
 *.secret.json
 credentials/
 
 # Firebase Secrets
-access_control/auth/serviceAccountKey.json
-access_control/auth/.user_session
-access_control/config/firebase_config.json
+firebase-admin-key.json
 token.pickle
