--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ dependencies = [
   flet==0.28.3
   flet-cli==0.28.3
   flet-desktop==0.28.3
+  flet-video==0.1.1
   future==1.0.0
   gcloud==0.18.3
   google-api-core==2.28.1
@@ -83,7 +84,6 @@ dependencies = [
   PyYAML==6.0.3
   qrcode==7.4.2
   repath==0.9.0
-  requests==2.32.5
   requests-oauthlib==2.0.0
   requests-toolbelt==0.10.1
   rich==14.2.0
@@ -92,12 +92,12 @@ dependencies = [
   sniffio==1.3.1
   text-unidecode==1.3
   toml==0.10.2
-  tqdm==4.67.1
   typing_extensions==4.15.0
   tzdata==2025.2
   uritemplate==4.2.0
   urllib3==1.26.20
   watchdog==4.0.2
+
 ]
 
 [tool.flet]
