--- a/pyproject.toml
+++ b/pyproject.toml
@@ -84,6 +84,7 @@ dependencies = [
   PyYAML==6.0.3
   qrcode==7.4.2
   repath==0.9.0
+  requests==2.32.5
   requests-oauthlib==2.0.0
   requests-toolbelt==0.10.1
   rich==14.2.0
@@ -97,7 +98,6 @@ dependencies = [
   uritemplate==4.2.0
   urllib3==1.26.20
   watchdog==4.0.2
-
 ]
 
 [tool.flet]
