--- a/requirements.txt
+++ b/requirements.txt
@@ -71,6 +71,7 @@ python-slugify==8.0.4
 PyYAML==6.0.3
 qrcode==7.4.2
 repath==0.9.0
+requests==2.32.5
 requests-oauthlib==2.0.0
 requests-toolbelt==0.10.1
 rich==14.2.0
